--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ a:visited {
 a:hover {
   color: hotpink;
   background-color: rgba(153,102,153, 0.5);
+  border-radius: '50%',
 }
 
 /* selected link */
